<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allerta_stencil"
        android:text="@string/app_title"
        android:textColor="@color/white"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/CardText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/CardText"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="7dp"
        app:layout_constraintBottom_toTopOf="@+id/ButtonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText">

        <TextView
            android:id="@+id/questionText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:text="@string/questionText"
            android:textSize="25sp"

            />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:padding="50dp"
        app:layout_constraintBottom_toTopOf="@+id/switchLayoutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CardText">

        <Button
            android:id="@+id/trueBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/trueBtn"
            android:textSize="30sp"
            android:layout_marginEnd="5dp" />

        <Button
            android:id="@+id/falseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/falseBtn"
            android:textSize="30sp"
            android:layout_marginStart="5dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/switchLayoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toTopOf="@+id/counterText"
        app:layout_constraintEnd_toEndOf="@+id/ButtonsLayout"
        app:layout_constraintStart_toStartOf="@+id/ButtonsLayout"
        app:layout_constraintTop_toBottomOf="@+id/ButtonsLayout">

        <ImageButton
            android:id="@+id/prevBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="125dp"
            android:layout_marginRight="125dp"
            android:layout_weight="1"
            android:background="@color/btnColor"
            android:contentDescription="@string/todo"
            app:srcCompat="@android:drawable/ic_media_previous" />

        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/btnColor"
            android:contentDescription="@string/nextimg"
            app:srcCompat="@android:drawable/ic_media_next" />
    </LinearLayout>

    <TextView
        android:id="@+id/counterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/counter"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"


        app:layout_constraintTop_toBottomOf="@+id/switchLayoutBtn" />

    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="8dp"
        android:text="@string/high_score"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/CardText"
        app:layout_constraintEnd_toStartOf="@+id/titleText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />


</androidx.constraintlayout.widget.ConstraintLayout>